feat: Enhance Java detection in chat scripts for improved compatibility with Java 21